# SAM-HPC

./: .gitignore  1.py  CMakeLists.txt  Makefile  QR.cu  README.md  correct_v1.cu  helper_functions.h  main.cu  main2.cu  main3.cu  main5.cu  main6.cu  main8.cu  matrixA_10.csc  matrix_1.csc  matrix_10.csc  matrix_2.csc  matrixb_10.csc  microbench.txt  microbench_result.txt  nohup.out  plots.ipynb  py_matrixA_10.npz  py_matrix_10.npz  py_matrixb_10.npz  run.ipynb  run_microbench.sh  snip1.cu  test_matio.cpp  test_matio_python.ipynb
OptimalSparsityPattern_SAM/: SAM.m  bubble_exact_map.m  bubble_map_comparison.m  bubble_sam.m  cd2d_exact_map.m  cd2d_sam.m  chow_sparsity_pattern_col_thres.m  chow_sparsity_pattern_global_thres.m  chow_sparsity_pattern_lfil.m  comparison.m  correctnessSAM.m  data_early.mat  generate_subset_sequence.m  simple_sparsity_pattern.m  sparsify_exact_map.m  subset_matrices_sam.m  tht_comparison.m  tht_exact_map.m  tht_sam.m  top_opt_comparison.m  top_opt_exact_map.m  top_opt_rhs.mat  top_opt_sam.m
PreconditioningDemo/: ILUTPSAMall_gmres.m  ILUTPall_gmres.m  ILUTPonce_gmres.m  backstep.m  cd2d_matrices.mat  cd2d_nonlinear.m  mgmres.m  my_ILUTP.m  pcoefdx.m  qcoefdx.m  rotmat.m
SAM_Spasrsity_Pattern/: ExactMapTheory.mlx  ExactMapTheory_Structural_Subset.mlx  ILUTPSAMall_gmres.m  LS_Test.mlx  SAM.m  SAM_Light.mlx  chow_sparsity_pattern_col_thres.m  chow_sparsity_pattern_global_thres.m  chow_sparsity_pattern_lfil.m  matvec.m  mgmres.m  noprec_gmres.m  r_cd_nonlinear_backstep.m  rhsLeftPrec.m  simple_sparsity_pattern.m
benchmark/: CMakeLists.txt  csc_matrix_bench.cpp  microbench.cpp  microbench_parallel.cpp  sam_bench.cpp  sparsity_function_bench.cpp  sparsity_pattern_benchmark.cpp
benchmarks/: CMakeLists.txt
benchmarks/microbench/: CMakeLists.txt  run_microbench.cpp  run_threshold_benchmark.cpp
benchmarks/qr_bench/: CMakeLists.txt  qr_bench_plot.ipynb  qr_bench_result.txt  run_qr_bench.cpp
cd2d_test/: cd2dtestmap.txt  source.txt  target.txt
common/: CMakeLists.txt
csr_matrix/: CMakeLists.txt
data/: matrix_1.mat  matrix_11.mat  matrix_12.mat  matrix_15.mat  matrix_19.mat  matrix_21.mat  matrix_29.mat  matrix_32.mat  matrix_35.mat  matrix_36.mat  matrix_40.mat  matrix_44.mat  matrix_46.mat  matrix_48.mat  matrix_53.mat  matrix_54.mat  matrix_57.mat  matrix_59.mat  matrix_61.mat  matrix_7.mat
data_2x3/: ros2_A_0.mat  ros2_A_1.mat  ros2_A_10.mat  ros2_A_100.mat  ros2_A_101.mat  ros2_A_102.mat  ros2_A_103.mat  ros2_A_104.mat  ros2_A_105.mat  ros2_A_106.mat  ros2_A_107.mat  ros2_A_108.mat  ros2_A_109.mat  ros2_A_11.mat  ros2_A_110.mat  ros2_A_111.mat  ros2_A_112.mat  ros2_A_113.mat  ros2_A_114.mat  ros2_A_115.mat  ros2_A_116.mat  ros2_A_117.mat  ros2_A_118.mat  ros2_A_119.mat  ros2_A_12.mat  ros2_A_120.mat  ros2_A_121.mat  ros2_A_122.mat  ros2_A_123.mat  ros2_A_124.mat  ros2_A_125.mat  ros2_A_126.mat  ros2_A_127.mat  ros2_A_128.mat  ros2_A_129.mat  ros2_A_13.mat  ros2_A_130.mat  ros2_A_131.mat  ros2_A_132.mat  ros2_A_133.mat  (+284 more)
data_3x5/: ros2_A_0.mat  ros2_A_1.mat  ros2_A_10.mat  ros2_A_100.mat  ros2_A_101.mat  ros2_A_102.mat  ros2_A_103.mat  ros2_A_104.mat  ros2_A_105.mat  ros2_A_106.mat  ros2_A_107.mat  ros2_A_108.mat  ros2_A_109.mat  ros2_A_11.mat  ros2_A_110.mat  ros2_A_111.mat  ros2_A_112.mat  ros2_A_113.mat  ros2_A_114.mat  ros2_A_115.mat  ros2_A_116.mat  ros2_A_117.mat  ros2_A_118.mat  ros2_A_119.mat  ros2_A_12.mat  ros2_A_120.mat  ros2_A_121.mat  ros2_A_122.mat  ros2_A_123.mat  ros2_A_124.mat  ros2_A_125.mat  ros2_A_126.mat  ros2_A_127.mat  ros2_A_128.mat  ros2_A_129.mat  ros2_A_13.mat  ros2_A_130.mat  ros2_A_131.mat  ros2_A_132.mat  ros2_A_133.mat  (+392 more)
data_4x6/: ros2_A_0.mat  ros2_A_1.mat  ros2_A_10.mat  ros2_A_100.mat  ros2_A_101.mat  ros2_A_102.mat  ros2_A_103.mat  ros2_A_104.mat  ros2_A_105.mat  ros2_A_106.mat  ros2_A_107.mat  ros2_A_108.mat  ros2_A_109.mat  ros2_A_11.mat  ros2_A_110.mat  ros2_A_111.mat  ros2_A_112.mat  ros2_A_113.mat  ros2_A_114.mat  ros2_A_115.mat  ros2_A_116.mat  ros2_A_117.mat  ros2_A_118.mat  ros2_A_119.mat  ros2_A_12.mat  ros2_A_120.mat  ros2_A_121.mat  ros2_A_122.mat  ros2_A_123.mat  ros2_A_124.mat  ros2_A_125.mat  ros2_A_126.mat  ros2_A_127.mat  ros2_A_128.mat  ros2_A_129.mat  ros2_A_13.mat  ros2_A_130.mat  ros2_A_131.mat  ros2_A_132.mat  ros2_A_133.mat  (+392 more)
data_5x8/: ros2_A_0.mat  ros2_A_1.mat  ros2_A_10.mat  ros2_A_100.mat  ros2_A_101.mat  ros2_A_102.mat  ros2_A_103.mat  ros2_A_104.mat  ros2_A_105.mat  ros2_A_106.mat  ros2_A_107.mat  ros2_A_108.mat  ros2_A_109.mat  ros2_A_11.mat  ros2_A_110.mat  ros2_A_111.mat  ros2_A_112.mat  ros2_A_113.mat  ros2_A_114.mat  ros2_A_115.mat  ros2_A_116.mat  ros2_A_117.mat  ros2_A_118.mat  ros2_A_119.mat  ros2_A_12.mat  ros2_A_120.mat  ros2_A_121.mat  ros2_A_122.mat  ros2_A_123.mat  ros2_A_124.mat  ros2_A_125.mat  ros2_A_126.mat  ros2_A_127.mat  ros2_A_128.mat  (+398 more)
examples/: CMakeLists.txt  SAM_test.cpp  householderQR_test.cpp  mgsQR_test.cpp  testSparsityPattern.cpp  test_spgemm.cpp
include/: CMakeLists.txt  SAM_Func.hpp  cscMatrix.hpp  samFunc.hpp  samFunc_threads.hpp  sparsityPattern.hpp  spgemm.hpp
include/config/: CMakeLists.txt  config.hpp
include/householder/: CMakeLists.txt  householderQR.hpp
include/mgs/: CMakeLists.txt  mgsQR.hpp
sam_hpc/: CMakeLists.txt
sam_hpc/include/: CMakeLists.txt  eigenQRSolve.hpp  extendPattern.hpp  read_mat.hpp  sam.hpp  sparsityPattern.hpp
sam_hpc/src/: CMakeLists.txt
tests/csr_test/: CMakeLists.txt  run_csr_tests.cpp  run_tests.cpp
tests/csr_test/cases/: addition.cpp  constructor.cpp  csr_format.cpp  linear_algebra.cpp  multiplication.cpp  output.cpp  subtraction.cpp  values.cpp
tests/csr_test/utils/: CMakeLists.txt  CSRMatrixMock.hpp  helpers.hpp
tests/qr_test/: CMakeLists.txt  run_qr_tests.cpp
tests/qr_test/cases/: test_eigen.cpp  test_householder.cpp  test_mgs.cpp
tests/sam_test/: CMakeLists.txt  run_sam_tests.cpp  testMatrix.txt
tests/sam_test/cases/: test_pattern.cpp  test_read_mat.cpp  test_sam_computation.cpp  test_sam_constructor.cpp
tests/utils/: CMakeLists.txt  CSRMatrixMock.hpp  helpers.hpp  testlib.hpp
(+1001 files in other folders)
